Create header partial and styling

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -13,7 +13,7 @@
   </head>
   <body class="<%= current_page.data.body_class || 'standard' %>">
     <header>
-
+      <%= partial "partials/header" %>
     </header>
     <main>
       <%= yield %>
