--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -1,2 +1,9 @@
+// Spaces
+
+$sp-small: rem-calc(10)
+$sp-base: rem-calc(20)
+$sp-big: rem-calc(40)
+$sp-large: rem-calc(60)
+
 $section-padding-x: 3vw
 $section-padding-y: 2vw
