Creates introduction including selfie and text

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,21 @@
 ---
 title: Björn Richter – Product Designer and Frontend Developer
 ---
+
+<%= image_tag 'selfie.jpg', :alt => "Selfie" %>
+<section>
+  <div class="grid-x grid-padding-x align-center">
+    <div class="cell medium-10 large-5 text-center large-text-right">
+      <h2 class="like-h4 text-grey">Hi, I'm Björn Richter,</h2>
+      <h1 class="text-primary">UX/UI Designer<br />and Frontend Developer<br />based in Berlin.</h1>
+    </div>
+    <div class="cell medium-8 large-5">
+      <p>
+        Currently I'm working at <%= link_to 'bitspire', 'http://bitspire.de', :target => 'blank' %> in Berlin. As a designer and frontend developer I do conceptual work, user interface design, frontend engineering and templating with the open source rails based AlchemyCMS. <br />
+        I have a bachelor degree in interface design from the <%= link_to 'University of Applied Sciences Potsdam', 'https://fh-potsdam.de', :target => 'blank' %>.<br />
+        In the past I gained experience at <%= link_to 'Edenspiekermann', 'http://edenspiekermann.de', :target => 'blank' %> and several other companies. A brief summary you can find at the bottom.
+      </p>
+    </div>
+  </div>
+</div>
+</section>
