Create basic section layout styles

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,2 +1,5 @@
 @import '../../bower_components/foundation-sites/assets/foundation';
 @import 'globals/foundation_settings';
+@import 'globals/variables';
+@import 'globals/layout';
+@import 'globals/typo';
