Setup typo variables

--- a/source/stylesheets/globals/_typo.sass
+++ b/source/stylesheets/globals/_typo.sass
@@ -1,2 +1,24 @@
-body
+body, html
   font-size: calc(0.75rem + 0.5vw)
+
+.like-h1
+  @extend h1
+
+.like-h2
+  @extend h2
+
+.like-h3
+  @extend h3
+
+.like-h4
+  @extend h4
+
+.like-h5
+  @extend h5
+
+.like-h6
+  @extend h6
+
+.text-caps
+  text-transform: uppercase
+  letter-spacing: 0.05em
