--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -7,3 +7,23 @@ $sp-large: rem-calc(60)
 
 $section-padding-x: 3vw
 $section-padding-y: 2vw
+
+
+// typo
+
+$font-stack-sans: Asap, sans-serif
+
+$fs-global: calc(0.75rem + 0.5vw)
+$fs-xsmall: rem-calc(12)
+$fs-small: rem-calc(14)
+$fs-base: rem-calc(16)
+$fs-medium: rem-calc(18)
+$fs-big: rem-calc(22)
+$fs-large: rem-calc(36)
+$fs-xlarge: rem-calc(48)
+
+$fw-regular: 300
+$fw-bold: 600
+
+$lh-small: 1.3
+$lh-normal: 1.5
