Initializes slick carousel

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,3 +20,4 @@ title: Björn Richter – Product Designer and Frontend Developer
 </div>
 </section>
 <%= partial "partials/vita" %>
+<%= javascript_include_tag 'slick'  %>
