Imports slick basic styles

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,4 +1,5 @@
 @import 'foundation-sites/scss/util/util';
+@import 'slick-carousel/slick/slick';
 @import 'globals/variables';
 @import 'globals/foundation_settings';
 @import 'globals/foundation_includes';
