--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -6,7 +6,11 @@ $sp-big: rem-calc(40)
 $sp-large: rem-calc(60)
 
 $section-padding-x: 3vw
-$section-padding-y: 2vw
+$section-padding-y: 8vw
+
+$gutter-small: rem-calc(20)
+$gutter-medium: rem-calc(40)
+$gutter-large: rem-calc(60)
 
 
 // typo
