Sets new fontface

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,6 +10,7 @@
     <title><%= current_page.data.title || "Björn Richter – Digital Product Designer and Frontend Developer" %></title>
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,800" rel="stylesheet">
   </head>
   <body class="<%= current_page.data.body_class || 'standard' %>">
     <header>
