--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -15,7 +15,7 @@ $gutter-large: rem-calc(60)
 
 // typo
 
-$font-stack-sans: Asap, sans-serif
+$font-stack-sans: 'Work Sans', sans-serif
 
 $fs-global: calc(0.75rem + 0.5vw)
 $fs-xsmall: rem-calc(12)
