Add grid lines as background texture

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,6 +17,7 @@
       <%= partial "partials/header" %>
     </header>
     <main>
+      <%#= partial "partials/grid_lines" %>
       <%= yield %>
     </main>
     <footer>
