Add basic custom colors

--- a/source/stylesheets/globals/_foundation_settings.scss
+++ b/source/stylesheets/globals/_foundation_settings.scss
@@ -68,18 +68,18 @@
 // $global-font-size: 100%;
 // $global-width: rem-calc(1200);
 $global-lineheight: $lh-normal;
-// $foundation-palette: (
-//   primary: #1779ba,
-//   secondary: #767676,
-//   success: #3adb76,
-//   warning: #ffae00,
-//   alert: #cc4b37,
-// );
-// $light-gray: #e6e6e6;
-// $medium-gray: #cacaca;
+$foundation-palette: (
+  primary: $c-primary,
+  secondary: #767676,
+  success: #3adb76,
+  warning: #ffae00,
+  alert: #cc4b37,
+);
+$light-gray: $c-grey-light;
+$medium-gray: $c-grey-base;
 // $dark-gray: #8a8a8a;
-// $black: #0a0a0a;
-// $white: #fefefe;
+$black: $c-black;
+$white: $c-white;
 // $body-background: $white;
 // $body-font-color: $black;
 $body-font-family: $font-stack-sans;
