Extract lemke case into seperate partial

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,30 +18,6 @@ title: Björn Richter – Product Designer and Frontend Developer
     </div>
   </div>
 </section>
-<section class="section-bordered">
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x align-center ">
-      <div class="cell medium-11 large-10">
-        <div class="carousel">
-          <div>
-            <%= image_tag 'lemke/lemke1.png' %>
-          </div>
-          <div>
-            <%= image_tag 'lemke/lemke2.png' %>
-          </div>
-          <div>
-            <%= image_tag 'lemke/lemke3.png' %>
-          </div>
-          <div>
-            <%= image_tag 'lemke/lemke3.png' %>
-          </div>
-          <div>
-            <%= image_tag 'lemke/lemke3.png' %>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<%= partial 'partials/cases/lemke' %>
 <%= partial "partials/vita" %>
 <%= javascript_include_tag 'slick'  %>
