Create desktop window and mobile frame for case screenshots

--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -61,3 +61,8 @@ $fw-black: 800
 
 $lh-small: 1.3
 $lh-normal: 1.5
+
+
+// effects
+
+$tile-box-shadow: 0 rem-calc(2) rem-calc(5) rgba(0,0,0,0.1), 0 rem-calc(4) rem-calc(20) rgba(0,0,0,0.1)
