Add title, infos, window frame and background to lemke case

--- a/source/partials/cases/_lemke.html.erb
+++ b/source/partials/cases/_lemke.html.erb
@@ -1,6 +1,9 @@
-<section class="section-bordered">
+<section class="lemke">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x align-center ">
+    <div class="grid-x grid-padding-x align-center text-center case-title">
+      <h2 class="cell medium-10">Lemke Website</h2>
+    </div>
+    <div class="grid-x grid-padding-x align-center case-pictures">
       <div class="cell medium-11 large-10">
         <div class="carousel">
           <div>
@@ -19,6 +22,20 @@
             <%= image_tag 'lemke/lemke3.png' %>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="grid-x grid-padding-x align-center case-info">
+      <div class="cell medium-6 large-3 xlarge-2 text-small">
+        <p class="text-small"><small class="text-grey">Context</small><br />2013, World of Medicine GmbH</p>
+      </div>
+      <div class="cell medium-6 large-3 xlarge-2 text-small">
+        <p class="text-small"><small class="text-grey">Online</small><br /><%= link_to "http://lemke.de" %></p>
+      </div>
+      <div class="cell medium-6 large-3 text-small">
+        <p class="text-small"><small class="text-grey">Project</small><br />Corporate website including product portfolio for LEMKE, a german medical device brand</p>
+      </div>
+      <div class="cell medium-6 large-3 text-small">
+        <p class="text-small"><small class="text-grey">Role/Responsibility</small><br />Concept, corporate (Re)design, webdesign, html prototype</p>
       </div>
     </div>
   </div>
