--- a/source/stylesheets/globals/_foundation_settings.scss
+++ b/source/stylesheets/globals/_foundation_settings.scss
@@ -171,7 +171,7 @@ $header-styles: (
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
 // $hr-width: $global-width;
-// $hr-border: 1px solid $medium-gray;
+$hr-border: 2px solid $c-grey-xlight;
 // $hr-margin: rem-calc(20) auto;
 // $list-lineheight: $paragraph-lineheight;
 // $list-margin-bottom: $paragraph-margin-bottom;
