--- a/source/stylesheets/globals/layout.sass
+++ b/source/stylesheets/globals/layout.sass
@@ -7,3 +7,12 @@ section
 ul
   list-style-type: none
   margin-left: 0
+
+.clearfix
+  +clearfix
+
+.case-title
+  margin-bottom: $sp-base
+
+.case-pictures
+  margin-bottom: $sp-big
