Add senshemp case

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,6 +18,7 @@ title: Björn Richter – Product Designer and Frontend Developer
     </div>
   </div>
 </section>
+<%= partial 'partials/cases/senshemp' %>
 <%= partial 'partials/cases/lemke' %>
 <%= partial "partials/vita" %>
 <%= javascript_include_tag 'slick'  %>
