--- a/source/stylesheets/elements/cases.sass
+++ b/source/stylesheets/elements/cases.sass
@@ -1,3 +1,9 @@
+.senshemp
+  background: $bg-senshemp
+
+  .device.desktop + hr
+    border-color: scale-color($c-senshemp, $lightness: -8%, $saturation: -50%)
+
 .lemke
   background: $bg-lemke
 
