Add color and blend mode to selfie image

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,9 @@
 title: Björn Richter – Product Designer and Frontend Developer
 ---
 
-<%= image_tag 'selfie.jpg', :alt => "Selfie" %>
+<div class="selfie">
+  <%= image_tag 'selfie.jpg', :alt => "Selfie" %>
+</div>
 <section>
   <div class="grid-x grid-padding-x align-center">
     <div class="cell medium-10 large-5 text-center large-text-right">
