--- a/source/stylesheets/globals/_layout.sass
+++ b/source/stylesheets/globals/_layout.sass
@@ -4,6 +4,13 @@
 section
   padding: $section-padding-y $section-padding-x
 
+.selfie
+  background-color: #FFFBF3
+
+  img
+    mix-blend-mode: multiply
+    opacity: .85
+
 ul
   list-style-type: none
   margin-left: 0
