Add white borders to sections

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,7 @@ title: Björn Richter – Product Designer and Frontend Developer
 <div class="selfie">
   <%= image_tag 'selfie.jpg', :alt => "Selfie" %>
 </div>
-<section>
+<section class="intro">
   <div class="grid-x grid-padding-x align-center">
     <div class="cell medium-10 large-5 text-center large-text-right">
       <h2 class="like-h4 text-grey">Hi, I'm Björn Richter,</h2>
