--- a/source/stylesheets/globals/_layout.sass
+++ b/source/stylesheets/globals/_layout.sass
@@ -3,6 +3,9 @@
 
 section
   padding: $section-padding-y $section-padding-x
+  border-style: solid
+  border-color: white
+  border-width: 0 $section-border-width $section-border-width $section-border-width
 
 .selfie
   background-color: #FFFBF3
@@ -10,6 +13,9 @@ section
   img
     mix-blend-mode: multiply
     opacity: .85
+
+.intro
+  border-top-width: $section-border-width
 
 ul
   list-style-type: none
