--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -29,6 +29,7 @@ $sp-large: rem-calc(60)
 
 $section-padding-x: 3vw
 $section-padding-y: 8vw
+$section-border-width: rem-calc(15)
 
 $gutter-small: rem-calc(20)
 $gutter-medium: rem-calc(40)
