Adjust header logo and title

--- a/source/stylesheets/elements/_header.sass
+++ b/source/stylesheets/elements/_header.sass
@@ -8,13 +8,20 @@ header
     display: block
 
   img
-    height: calc(3rem + 3vw)
+    height: calc(3.25rem + .5vw)
 
   p
     margin: 0 $sp-base
+    text-transform: uppercase
+    letter-spacing: .2em
+    font-size: rem-calc(10)
 
   a
     color: $c-black
+
+  span
+    color: $c-primary
+    margin: 0 .25em
 
 
 // > Tablet
