--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -1,6 +1,6 @@
 <% link_to "https://bjoern-richter.com", class: 'logo' do %>
-  <div class="grid-x">
+  <div class="grid-x align-middle">
     <%= image_tag "bjoern-richter-logo.svg", class: "cell shrink" %>
-    <p class="cell auto">Björn<span>|</span>Richter<br />Digital<span>|</span>Product<span>|</span>Designer<br />Frontend<span>|</span>Developer</p>
+    <p class="cell auto text-bold">Björn<span>|</span>Richter<br />Concept/UX/UI<span>|</span>Designer<br />Frontend<span>|</span>Developer</p>
   </div>
 <% end %>
