--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,6 +20,7 @@ title: Björn Richter – Product Designer and Frontend Developer
     </div>
   </div>
 </section>
+<%= partial 'partials/cases/freud' %>
 <%= partial 'partials/cases/senshemp' %>
 <%= partial 'partials/cases/lemke' %>
 <%= partial "partials/vita" %>
