--- a/source/stylesheets/elements/_cases.sass
+++ b/source/stylesheets/elements/_cases.sass
@@ -10,6 +10,9 @@
   .device.desktop + hr
     border-color: $c-black
 
+.freud
+  background: $bg-freud
+
 .case-info > .cell p
   border-left: 2px solid rgba(black, .05)
   padding-left: $sp-base
