--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -19,6 +19,9 @@ $bg-senshemp: linear-gradient(scale-color($c-senshemp, $lightness: 50%), $c-sens
 $c-lemke: #E4EBF0
 $bg-lemke: linear-gradient(scale-color($c-lemke, $lightness: 60%), $c-lemke)
 
+$c-freud: #E4E7F0
+$bg-freud: linear-gradient(scale-color($c-freud, $lightness: 60%), $c-freud)
+
 
 // Spaces
 
