Add Alchemy case

--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -62,3 +62,4 @@ $lh-normal: 1.5
 // effects
 
 $tile-box-shadow: 0 rem-calc(2) rem-calc(5) rgba(0,0,0,0.1), 0 rem-calc(4) rem-calc(20) rgba(0,0,0,0.1)
+$big-box-shadow: 0 rem-calc(5) rem-calc(20) rgba(0,0,0,0.1)
