--- a/source/stylesheets/elements/_cases.sass
+++ b/source/stylesheets/elements/_cases.sass
@@ -17,3 +17,13 @@
   border-left: 2px solid rgba(black, .05)
   padding-left: $sp-base
 
+.primary-image
+  z-index: 10
+
+.secondary-image img
+  width: 100%
+  box-shadow: $tile-box-shadow
+
+.primary-image img
+  width: 100%
+  box-shadow: $big-box-shadow
