Add ambient case backgrounds
and remove custom case related ones

--- a/source/stylesheets/elements/_cases.sass
+++ b/source/stylesheets/elements/_cases.sass
@@ -1,17 +1,33 @@
-.senshemp
-  background: $bg-senshemp
+.bg-blue-pastel
+  background: $bg-blue-pastel
 
   .device.desktop + hr
-    border-color: scale-color($c-senshemp, $lightness: -8%, $saturation: -50%)
+    border-color: scale-color($c-blue-pastel, $lightness: -8%, $saturation: -50%)
 
-.lemke
-  background: $bg-lemke
+.bg-green-pastel
+  background: $bg-green-pastel
 
   .device.desktop + hr
-    border-color: $c-black
+    border-color: scale-color($c-green-pastel, $lightness: -8%, $saturation: -50%)
 
-.freud
-  background: $bg-freud
+.bg-brown-pastel
+  background: $bg-brown-pastel
+
+  .device.desktop + hr
+    border-color: scale-color($c-brown-pastel, $lightness: -8%, $saturation: -50%)
+
+.bg-purple-pastel
+  background: $bg-purple-pastel
+
+  .device.desktop + hr
+    border-color: scale-color($c-purple-pastel, $lightness: -8%, $saturation: -50%)
+
+.bg-grey-pastel
+  background: $bg-grey-pastel
+
+  .device.desktop + hr
+    border-color: scale-color($c-grey-pastel, $lightness: -8%, $saturation: -50%)
+
 
 .case-info > .cell p
   border-left: 2px solid rgba(black, .05)
