--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -13,14 +13,20 @@ $c-minimize: #FDB425
 $c-maximize: #2AC632
 
 // case backgrounds
-$c-senshemp: #F3ECE2
-$bg-senshemp: linear-gradient(scale-color($c-senshemp, $lightness: 50%), $c-senshemp)
+$c-brown-pastel: #F3ECE2
+$bg-brown-pastel: linear-gradient(scale-color($c-brown-pastel, $lightness: 40%), $c-brown-pastel)
 
-$c-lemke: #E4EBF0
-$bg-lemke: linear-gradient(scale-color($c-lemke, $lightness: 60%), $c-lemke)
+$c-blue-pastel: #E9F0F8
+$bg-blue-pastel: linear-gradient(scale-color($c-blue-pastel, $lightness: 40%), $c-blue-pastel)
 
-$c-freud: #E4E7F0
-$bg-freud: linear-gradient(scale-color($c-freud, $lightness: 60%), $c-freud)
+$c-green-pastel: #EEF0E4
+$bg-green-pastel: linear-gradient(scale-color($c-green-pastel, $lightness: 40%), $c-green-pastel)
+
+$c-purple-pastel: #EBE9F5
+$bg-purple-pastel: linear-gradient(scale-color($c-purple-pastel, $lightness: 40%), $c-purple-pastel)
+
+$c-grey-pastel: #E6E8EB
+$bg-grey-pastel: linear-gradient(scale-color($c-grey-pastel, $lightness: 40%), $c-grey-pastel)
 
 
 // Spaces
