Render case partials on index page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,8 +20,13 @@ title: Björn Richter – Product Designer and Frontend Developer
     </div>
   </div>
 </section>
-<%= partial 'partials/cases/freud' %>
+<%= partial 'partials/cases/alchemy' %>
 <%= partial 'partials/cases/senshemp' %>
-<%= partial 'partials/cases/lemke' %>
+<%= partial 'partials/cases/freud' %>
+<%= partial 'partials/cases/majestic' %>
+<%= partial 'partials/cases/typo' %>
+<%= partial 'partials/cases/beyond' %>
+<%= partial 'partials/cases/insufflator' %>
+<%#= partial 'partials/cases/lemke' %>
 <%= partial "partials/vita" %>
 <%= javascript_include_tag 'slick'  %>
