Add global zero padding classes

--- a/source/stylesheets/globals/_layout.sass
+++ b/source/stylesheets/globals/_layout.sass
@@ -29,3 +29,11 @@ ul
 
 .case-pictures
   margin-bottom: $sp-big
+
+.p-top-0,
+.cell.p-top-0
+  padding-top: 0
+
+.p-bottom-0,
+.cell.p-bottom-0
+  padding-bottom: 0
