--- a/source/stylesheets/globals/_layout.sass
+++ b/source/stylesheets/globals/_layout.sass
@@ -4,7 +4,7 @@
 body
   overflow-x: hidden
 
-section
+section, footer
   padding: $section-padding-y $section-padding-x
   border-style: solid
   border-color: white
