Add foot note with last update and imprint link

--- a/source/partials/_footer.html.erb
+++ b/source/partials/_footer.html.erb
@@ -3,3 +3,9 @@
   <li class="xing"><%= link_to "Find me on xing", "https://www.xing.com/profile/Bjoern_Richter14", target: "blank", title: "Find me on Xing" %></li>
   <li class="github"><%= link_to "Find me on github", "https://github.com/rbjoern84", target: "blank", title: "Find me on github" %></li>
 </ul>
+<p class="text-small text-center">
+  Last update: <%= Time.now.strftime("%B %e, %Y") %>
+  <span class="text-grey-muted"> / </span>
+  <%= link_to "Imprint", "/imprint.html" %>
+</p>
+
